@@ -747,4 +747,7 @@ Changes since version 1.5-34
            (new func trans_clubSandwich_vcov added for this purpose).
   * (internal) model.matrix.pFormula: case "pooling" added to twoway/unbalanced condition;
                                       for unknown cases, give meaningful error.
+  * alias.plm, alias.pFormula added: complements the generic stats::alias to detect linear 
+                                     dependence (much like detect_lin_dep).
+  * detect_lin_dep.plm added.
   
